Repository and UnitOfWork, custom Convertion, new free API

--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -2,62 +2,105 @@
 @{
     ViewData["Title"] = "Home Page";
 }
-<ul>
-    <ul>
-        <li><span style="font-size: 20px">Convert from</span></li>
-        <li><textarea id="from"></textarea></li>
-        <li><span style="font-size: 20px">Convert to</span></li>
-        <li><textarea id="to"></textarea></li>
-        <li><span style="font-size: 20px">Convert amount</span></li>
-        <li><textarea id="amount"></textarea></li>
-        <li><button id="doConvert" onclick="convert();">Convert</button></li>
-        <li><span>Result = </span><span id ="result"></span></li>
-    </ul>
-    
- 
-
-    <div>
-        <h2>Eur Rates</h2>
-        <ul id="rates"/>
-    </div>
 
 
-    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.0.3.min.js"></script>
-    <script>
-        $(document).ready(function() {
-            // Send an AJAX request
-            $.getJSON("api/Rates")
-                .done(function(data) {
-                    // On success, 'data' contains a list of products.
-                    $.each(data,
-                        function(key, item) {
-                            // Add a list item for the product.
-                            $('<li>', { text: formatItem(item) }).appendTo($('#rates'));
-                        });
-                });
-        });
+<ul style="list-style-type: none">
+    <li><span style="font-size: 20px">Convert from</span></li>
+    <li><textarea id="from"></textarea></li>
+    <li><span style="font-size: 20px">Convert to</span></li>
+    <li><textarea id="to"></textarea></li>
+    <li><span style="font-size: 20px">Convert amount</span></li>
+    <li><textarea id="amount"></textarea></li>
+    <li><button id="doConvert" onclick="convert();">Convert</button></li>
+    <li><span>Result = </span><span id="result"></span></li>
+</ul>
 
-        function formatItem(item) {
-            return item.currencyType + ': ' + item.exchangeRate;
-        }
 
-        function formatConvert(item) {
-            return 'According to: ' +  item.date + ' Result is: ' + item.result;
-        }
+<div>
+    <h2>EUR Rates</h2>
+    <ul style="list-style-type: none" id="rates" />
+</div>
 
-        function convert() {
-            var from = $('#from').val();
-            var to = $('#to').val();
-            var amount = $('#amount').val();
-            var uri = "api/Rates/" + from + '/' + to + '/' + amount;
-            $.getJSON(uri)
+<div>
+    <h2>Any Rates</h2>
+    <textarea id="rateType"></textarea>
+    <button onclick="getAnyRate()">Get</button>
+    <ul style="list-style-type: none" id="anyRates" />
+</div>
+
+
+<div>
+    <h2>Get EUR rates from date</h2>
+    <textarea id="rateDate"></textarea>
+    <button onclick="getDateRates()">Get</button>
+    <ul style="list-style-type: none" id="dateRates"></ul>
+</div>
+
+
+
+
+<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.0.3.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $.getJSON("api/Rates")
+            .done(function (data) {
+                $.each(data,
+                    function (key, item) {
+                        $('<li>', { text: formatItem(item) }).appendTo($('#rates'));
+                    });
+            });
+    });
+
+    function getAnyRate() {
+        var rateType = $("#rateType").val();
+        var uri = "api/Rates/" + rateType;
+        $("#anyRates").empty();
+        $.getJSON(uri)
+            .done(function (data) {
+                $.each(data,
+                    function (key, item) {
+                        $('<li>', { text: formatItem(item) }).appendTo($('#anyRates'));
+                    });
+            });
+    }
+
+    function getDateRates() {
+        var date = $('#rateDate').val();
+        var uri = "api/Rates/Date/" + date;
+        //var table = document.createElement('table');
+        //table.id="#dateRates";
+        $('#dateRates').empty();
+        $.getJSON(uri)
+            .done(function (data) {
+                $.each(data,
+                    function (key, item) {
+                        $('<li>', { text: formatItem(item) }).appendTo($('#dateRates'));
+                    });
+            });
+    }
+
+
+
+    function formatItem(item) {
+        return item.currencyType + ': ' + item.exchangeRate;
+    }
+
+    function formatConvert(item) {
+        return 'According to: ' + item.date + ' Result is: ' + item.result;
+    }
+
+    function convert() {
+        var from = $('#from').val();
+        var to = $('#to').val();
+        var amount = $('#amount').val();
+        var uri = "api/Rates/" + from + '/' + to + '/' + amount;
+        $.getJSON(uri)
             .done(function (data) {
                 $('#result').text(formatConvert(data));
             })
-        .fail(function (jqXHR, textStatus, err) {
-            $('#result').text('Error: ' + err);
-        });
+            .fail(function (jqXHR, textStatus, err) {
+                $('#result').text('Error: ' + err);
+            });
 
-        }
-    </script>
-</ul>
+    }
+</script>
