--- a/WebApplication1/wwwroot/css/site.css
+++ b/WebApplication1/wwwroot/css/site.css
@@ -5,6 +5,10 @@ body {
     padding-bottom: 20px;
 }
 
+#ratesBlockj li div{
+    display: inline;
+}
+
 /* Wrapping element */
 /* Set some basic padding to keep content from hitting the edges */
 .body-content {
