--- a/WebApplication1/Views/Home/Register.cshtml
+++ b/WebApplication1/Views/Home/Register.cshtml
@@ -2,18 +2,20 @@
 @{
     ViewData["Title"] = "Register";
 }
+<link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+<link href="~/css/forms.css" rel="stylesheet" />
 
-
-<div class="regForm">
-    <h3>Register</h3>
-    <label>Input email</label><br />
-    <input type="email" id="emailReg" /> <br /><br />
-    <label>Input Password</label><br />
-    <input type="password" id="passwordReg" /><br /><br />
-    <label>Confirm Password</label><br />
-    <input type="passwordConfirm" id="confirm" /><br /><br />
-    <input type="submit" id="submitRegister" value="Register" />
-    <input type="submit" id="submitLogin" value="Login" />
+<div class = "containerForm">
+    <div class="form-group">
+        <h3>Register</h3>
+        <label>Input email</label><br />
+        <input type="email" class="form-control" id="emailReg" /> <br /><br />
+        <label>Input Password</label><br />
+        <input type="password" class="form-control" id="passwordReg" /><br /><br />
+        <label>Confirm Password</label><br />
+        <input type="passwordConfirm" class="form-control" id="confirm" /><br /><br />
+        <input type="submit"  class="btn btn-primary" id="submitRegister" value="Register" />
+    </div>
 </div>
 
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
@@ -21,19 +23,21 @@
     $('#submitRegister').click(function(e) {
         e.preventDefault();
         var registerData = {
-            username: $('#emailReg').val(),
-            password: $('#passwordReg').val(),
-            confirmPassword: $('#confirm').val()
+            Email: $('#emailReg').val(),
+            Password: $('#passwordReg').val(),
+            ConfirmPassword: $('#confirm').val()
         }
-
         $.ajax({
             type: 'POST',
-            url: 'api/Account/registerToken',
-            data: registerData
-        })
-    })
+            url: '/registerToken',
+            data: registerData,
+            success: function (data) {
+                sessionStorage.setItem(tokenKey, data.access_token);
+                console.log(data.access_token);
 
-    $('#submitLogin').click(function(e) {
-        window.location.href = "/home/login"
+                var token = sessionStorage.getItem(tokenKey);
+                window.location.href = "/home"
+            }
+        })
     })
 </script>
