--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -27,21 +27,17 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">WebApplication1</a>
+                <a asp-area="" asp-controller="Home" asp-action="Register" class="navbar-brand">Register</a>
+                <a asp-area="" asp-controller="Home" asp-action="Login" class="navbar-brand">Login</a>
             </div>
             <div class="navbar-collapse collapse">
                 
             </div>
         </div>
     </nav>
-
-    <partial name="_CookieConsentPartial" />
-
     <div class="container body-content">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; 2018 - WebApplication1</p>
-        </footer>
+     
     </div>
 
     <environment include="Development">
