Tokens via registration fixed

--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -61,7 +61,7 @@
         <span style="font-size: 20px">Convert amount</span>
         <textarea class="form-control" id="amount"></textarea>
         <button class="btn btn-primary" id="doConvert" onclick="convert()">Convert</button>
-        <span>Result = </span><span id="result"></span>
+        <label>Result: </span><span id="result"></label>
     </div>
 
     <div>
